[package]
name = "rdl-lib"
version = "0.1.0"
authors = ["Axel Boldt-Christmas <xmas1915@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
peg = "*"
im = "*"
#rug = "*"
num = "*"
bigdecimal = "*"
lazy_static = "*"